[tool.poetry]
name = "bizdays"
version = "1.0.16"
description = "Functions to handle business days calculations"
authors = ["wilsonfreitas <wilson.freitas@gmail.com>"]
readme = "README.md"
include = [
    { path = "ANBIMA.cal", format = ["sdist", "wheel"] },
    { path = "B3.cal", format = ["sdist", "wheel"] },
    { path = "Actual.cal", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.9"
pandas-market-calendars = "^4"
pandas = "^2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pycodestyle = "*"
ipykernel = "*"

[tool.poetry.group.docs.dependencies]
Sphinx = "*"
nbsphinx = "*"
matplotlib = "*"
lxml = "*"
alabaster = "*"
ipywidgets = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
